# kata-tee-runner

./: .gitignore  Dockerfile.base  README.md  build.sh  conftest.py  fake_profile.py  kata_seal.py  pyproject.toml  requirements.txt  step0_check.py  test_inference_gateway.py  test_inference_network.py  test_profile.py  test_sealing.py  test_server.py  verify_run.py
room/: __init__.py  attest.py  auth.py  bundle.py  dstack.py  ids.py  inference_gateway.py  inference_network.py  profile.py  relay_net.py  sealing.py  server.py
