[project]
name = "kata-tee-runner"
version = "0.1.0"
description = "Subnet-neutral confidential TEE runner for miner-funded agents."
requires-python = ">=3.12"
dependencies = [
  "coincurve",
  "dstack-sdk",
  "eciespy",
  "flask>=3.0",
]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["room"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
